[gd_scene load_steps=3 format=3 uid="uid://uqot4bww7sud"]

[ext_resource type="Script" path="res://Scenes/UI/Interface/Modals/ShopModal.gd" id="1_06iu8"]
[ext_resource type="Texture2D" uid="uid://bgk4mnorc1p4h" path="res://icon.png" id="2_na2do"]

[node name="ShopModal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_06iu8")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -224.0
offset_top = -136.0
offset_right = 224.0
offset_bottom = 152.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_na2do")

[node name="CloseButton" type="TextureButton" parent="NinePatchRect"]
offset_left = 368.0
offset_top = 16.0
offset_right = 432.0
offset_bottom = 80.0
scale = Vector2(0.7, 0.7)
texture_normal = ExtResource("2_na2do")

[node name="Text" type="Panel" parent="NinePatchRect"]
offset_left = 128.0
offset_top = 16.0
offset_right = 320.0
offset_bottom = 48.0

[node name="Label" type="Label" parent="NinePatchRect/Text"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Shop"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSplitContainer" type="HSplitContainer" parent="NinePatchRect"]
anchors_preset = -1
anchor_left = 0.036
anchor_top = 0.222
anchor_right = 0.964
anchor_bottom = 0.944
offset_left = -0.128
offset_top = 0.0639954
offset_right = 0.127991
offset_bottom = 0.127991
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="NinePatchRect/HSplitContainer"]
offset_right = 202.0
offset_bottom = 208.0
size_flags_horizontal = 3

[node name="Items" type="HFlowContainer" parent="NinePatchRect/HSplitContainer/Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="Panel2" type="Panel" parent="NinePatchRect/HSplitContainer"]
offset_left = 214.0
offset_right = 416.0
offset_bottom = 208.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/HSplitContainer/Panel2"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="ItemName" type="Label" parent="NinePatchRect/HSplitContainer/Panel2/VBoxContainer"]
offset_top = -1.0
offset_right = 202.0
offset_bottom = 15.25
theme_override_colors/font_color = Color(0.843137, 0.74902, 0.152941, 1)
theme_override_colors/font_shadow_color = Color(0.290196, 0.231373, 0.00784314, 1)
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="RichTextLabel" parent="NinePatchRect/HSplitContainer/Panel2/VBoxContainer"]
offset_top = 20.0
offset_right = 202.0
offset_bottom = 120.0
size_flags_vertical = 3
theme_override_constants/line_separation = 1
theme_override_font_sizes/normal_font_size = 12

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/HSplitContainer/Panel2/VBoxContainer"]
offset_top = 124.0
offset_right = 202.0
offset_bottom = 140.0
size_flags_vertical = 8
alignment = 1

[node name="Vibe" type="Label" parent="NinePatchRect/HSplitContainer/Panel2/VBoxContainer/HBoxContainer"]
offset_right = 64.0
offset_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.580392, 0.419608, 0.984314, 1)
theme_override_colors/font_shadow_color = Color(0.372549, 0, 0.72549, 1)
horizontal_alignment = 1
vertical_alignment = 1

[node name="Flex" type="Label" parent="NinePatchRect/HSplitContainer/Panel2/VBoxContainer/HBoxContainer"]
offset_left = 68.0
offset_top = -1.0
offset_right = 133.0
offset_bottom = 15.25
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.964706, 0.345098, 0.85098, 1)
theme_override_colors/font_shadow_color = Color(0.333333, 0.0745098, 0.376471, 1)
horizontal_alignment = 1
vertical_alignment = 1

[node name="Price" type="Label" parent="NinePatchRect/HSplitContainer/Panel2/VBoxContainer/HBoxContainer"]
offset_left = 137.0
offset_top = -1.0
offset_right = 202.0
offset_bottom = 15.25
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0.92549, 0.368627, 1)
theme_override_colors/font_shadow_color = Color(0.137255, 0.27451, 0.247059, 1)
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="NinePatchRect/HSplitContainer/Panel2/VBoxContainer"]
offset_top = 144.0
offset_right = 202.0
offset_bottom = 208.0

[node name="Stock" type="Label" parent="NinePatchRect/HSplitContainer/Panel2/VBoxContainer/HBoxContainer2"]
offset_top = 23.0
offset_right = 99.0
offset_bottom = 39.25
size_flags_horizontal = 3
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButton" type="TextureButton" parent="NinePatchRect/HSplitContainer/Panel2/VBoxContainer/HBoxContainer2"]
offset_left = 103.0
offset_right = 202.0
offset_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 8
texture_normal = ExtResource("2_na2do")
stretch_mode = 3

[connection signal="pressed" from="NinePatchRect/CloseButton" to="." method="Close"]
[connection signal="pressed" from="NinePatchRect/HSplitContainer/Panel2/VBoxContainer/HBoxContainer2/TextureButton" to="." method="_Buy_Pressed"]
